dodani novi testovi i ispitvanje code coveragea